@@ -1,1 +1,1 @@
-#define VERSION	"Fourth Edition (20090805)"
+#define VERSION	"Fourth Edition (20090806)"
